chat-app-react-nodejs/Deployments/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatdeployment
spec:
  selector:
    matchLabels:
      app: chat-front
  replicas: 1
  template:
    metadata:
      labels:
        app: chat-front
    spec:
      containers:
      - name: nginx
        image: frontchat:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1 
kind: Service 
metadata:
  name: chat-webservice
spec:
  selector:
    app: chat-front
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
