chat-app-react-nodejs/Deployments/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-plate
spec:
  rules:
  - host: www.chat.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-webservice
            port:
              number: 80
